--- a/project/client/Cargo.toml
+++ b/project/client/Cargo.toml
@@ -11,3 +11,4 @@ bevy = "0.11"
 image = "0.24"
 topology = { path = "../topology" }
 fragmentation_handling = { path = "../fragmentation_handling" }
+rand = "0.8.5"
