--- a/project/server/Cargo.toml
+++ b/project/server/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
 crossbeam-channel = "0.5.13"
 controller = {path = "../controller" }
+bevy = "0.11"
+image = "0.24"
+topology = { path = "../topology" }
+fragmentation_handling = { path = "../fragmentation_handling" }
+rand = "0.8.5"
+dashmap = "6.1.0"
