--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,7 @@ rfd = "0.15.3"
 chrono = "0.4.0"
 rodio = "0.20.1"
 flate2 = "1.1.1"
-bincode = { version = "2.0.0-rc", features = ["serde"] }
+serde = "1.0.219"
+
+[profile.release]
+opt-level= 3
