--- a/configs/config.toml
+++ b/configs/config.toml
@@ -1,22 +1,7 @@
 [[drone]]
 id = 1
-connected_node_ids = [2,6,21]
-pdr = 0.05
-
-[[drone]]
-id = 2
-connected_node_ids = [1,3]
-pdr = 0.05
-
-[[drone]]
-id = 3
-connected_node_ids = [2,6,22]
-pdr = 0.05
-
-[[drone]]
-id = 6
-connected_node_ids = [1,3,31]
-pdr = 0.05
+connected_node_ids = [21,22,23,31,32]
+pdr = 0.00
 
 [[client]]
 id = 21
@@ -24,9 +9,17 @@ connected_drone_ids = [1]
 
 [[client]]
 id = 22
-connected_drone_ids = [3]
+connected_drone_ids = [1]
+
+[[client]]
+id = 23
+connected_drone_ids = [1]
+
+[[server]]
+id = 32
+connected_drone_ids = [1]
 
 [[server]]
 id = 31
-connected_drone_ids = [6]
+connected_drone_ids = [1]
 
