--- a/configs/config.toml
+++ b/configs/config.toml
@@ -1,17 +1,22 @@
 [[drone]]
 id = 1
-connected_node_ids = [21,22,31]
+connected_node_ids = [2,21,22,31]
+pdr = 0.00
+
+[[drone]]
+id = 2
+connected_node_ids = [1,21,22,31]
 pdr = 0.00
 
 [[client]]
 id = 21
-connected_drone_ids = [1]
+connected_drone_ids = [1,2]
 
 [[server]]
 id = 22
-connected_drone_ids = [1]
+connected_drone_ids = [1,2]
 
 [[server]]
 id = 31
-connected_drone_ids = [1]
+connected_drone_ids = [1,2]
 
