--- a/configs/config_9.toml
+++ b/configs/config_9.toml
@@ -5,7 +5,7 @@ pdr = 0.05
 
 [[drone]]
 id = 2
-connected_node_ids = [ 1, 3,]
+connected_node_ids = [ 1, 3, 23]
 pdr = 0.05
 
 [[drone]]
@@ -56,9 +56,9 @@ connected_drone_ids = [ 4,]
 id = 22
 connected_drone_ids = [ 9, 10]
 
-[[client]]
+[[server]]
 id = 23
-connected_drone_ids = [ 1 ]
+connected_drone_ids = [ 1 , 2]
 
 
 [[server]]
